// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiFacetButton is rendered 1`] = `
<button
  aria-label="aria-label"
  class="euiFacetButton testClass1 testClass2 css-ffj30w-euiFacetButton-unSelected"
  data-test-subj="test subject string"
  title="aria-label"
  type="button"
>
  <span
    class="euiFacetButton__content css-84oukk-euiFacetButton__content"
  >
    <span
      class="euiFacetButton__text css-w00iqi-euiFacetButton__text"
    >
      Content
    </span>
  </span>
</button>
`;

exports[`EuiFacetButton props icon is rendered 1`] = `
<button
  class="euiFacetButton css-ffj30w-euiFacetButton-unSelected"
  type="button"
>
  <span
    class="euiFacetButton__content css-84oukk-euiFacetButton__content"
  >
    <span
      class="css-4d6sbn-euiFacetButton__icon"
      data-euiicon-type="dot"
    />
    <span
      class="euiFacetButton__text css-w00iqi-euiFacetButton__text"
    >
      Content
    </span>
  </span>
</button>
`;

exports[`EuiFacetButton props isDisabled is rendered 1`] = `
<button
  class="euiFacetButton css-ffj30w-euiFacetButton-unSelected"
  disabled=""
  type="button"
>
  <span
    class="euiFacetButton__content css-84oukk-euiFacetButton__content"
  >
    <span
      class="euiFacetButton__text css-w00iqi-euiFacetButton__text"
    >
      Content
    </span>
  </span>
</button>
`;

exports[`EuiFacetButton props isLoading is rendered 1`] = `
<button
  class="euiFacetButton css-ffj30w-euiFacetButton-unSelected"
  disabled=""
  type="button"
>
  <span
    class="euiFacetButton__content css-84oukk-euiFacetButton__content"
  >
    <span
      class="euiFacetButton__text css-w00iqi-euiFacetButton__text"
    >
      Content
    </span>
    <span
      aria-label="Loading"
      class="euiLoadingSpinner euiFacetButton__spinner css-155ohbx-euiLoadingSpinner-m"
      role="progressbar"
    />
  </span>
</button>
`;

exports[`EuiFacetButton props isSelected is rendered 1`] = `
<button
  class="euiFacetButton css-kuig8s-euiFacetButton-isSelected"
  type="button"
>
  <span
    class="euiFacetButton__content css-84oukk-euiFacetButton__content"
  >
    <span
      class="euiFacetButton__text css-w00iqi-euiFacetButton__text"
    >
      Content
    </span>
  </span>
</button>
`;

exports[`EuiFacetButton props quantity is rendered 1`] = `
<button
  class="euiFacetButton css-ffj30w-euiFacetButton-unSelected"
  type="button"
>
  <span
    class="euiFacetButton__content css-84oukk-euiFacetButton__content"
  >
    <span
      class="euiFacetButton__text css-w00iqi-euiFacetButton__text"
    >
      Content
    </span>
    <span
      class="euiNotificationBadge euiNotificationBadge--medium euiNotificationBadge--subdued euiFacetButton__quantity"
    >
      60
    </span>
  </span>
</button>
`;
